a4/parser.output
Terminals unused in grammar

   INC
   DEC
   COMP_PLUS
   COMP_MINUS
   UPULS
   UMMINUS
   UPPLUS


State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID
   11       | VarDec LB INT RB

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmList RC

   18 StmList: /* empty */
   19        | Stmt StmList

   20 Stmt: Exp SEMI
   21     | CompSt
   22     | RETURN Exp SEMI
   23     | IF LP Exp RP Stmt
   24     | IF LP Exp RP Stmt ELSE Stmt
   25     | WHILE LP Exp RP Stmt
   26     | FOR LP Exp SEMI Exp SEMI Exp RP

   27 DefList: /* empty */
   28        | Def DefList

   29 Def: Specifier DecList SEMI

   30 DecList: Dec
   31        | Dec COMMA DecList

   32 Dec: VarDec
   33    | VarDec ASSIGNOP Exp

   34 Exp: Exp ASSIGNOP Exp
   35    | Exp AND Exp
   36    | Exp OR Exp
   37    | Exp RELOP Exp
   38    | Exp PLUS Exp
   39    | Exp MINUS Exp
   40    | Exp STAR Exp
   41    | Exp DIV Exp
   42    | LP Exp RP
   43    | MINUS Exp
   44    | NOT Exp
   45    | ID LP Args RP
   46    | ID LP RP
   47    | ID
   48    | INT
   49    | FLOAT
   50    | CHAR
   51    | VarDec PPLUS
   52    | VarDec MMINUS
   53    | PPLUS VarDec
   54    | MMINUS VarDec
   55    | Exp ID
   56    | VarDec LB INT RB

   57 Args: Exp COMMA Args
   58     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 11 48 56
ID (259) 10 12 13 45 46 47 55
RELOP (260) 37
TYPE (261) 7
FLOAT (262) 49
CHAR (263) 50
LP (264) 12 13 23 24 25 26 42 45 46
RP (265) 12 13 23 24 25 26 42 45 46
LC (266) 17
RC (267) 17
SEMI (268) 4 6 20 22 26 29
COMMA (269) 9 15 31 57
PLUS (270) 38
MINUS (271) 39 43
STAR (272) 40
DIV (273) 41
ASSIGNOP (274) 33 34
AND (275) 35
OR (276) 36
NOT (277) 44
IF (278) 23 24
ELSE (279) 24
WHILE (280) 25
RETURN (281) 22
INC (282)
DEC (283)
FOR (284) 26
LB (285) 11 56
RB (286) 11 56
COMP_PLUS (287)
COMP_MINUS (288)
MMINUS (289) 52 54
PPLUS (290) 51 53
UPULS (291)
UMINUS (292)
UMMINUS (293)
UPPLUS (294)
LOWER_THEN_ELSE (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
ExtDefList (43)
    on left: 2 3, on right: 1 3
ExtDef (44)
    on left: 4 5 6, on right: 3
Specifier (45)
    on left: 7, on right: 4 5 16 29
ExtDecList (46)
    on left: 8 9, on right: 4 9
VarDec (47)
    on left: 10 11, on right: 8 9 11 16 32 33 51 52 53 54 56
FuncDec (48)
    on left: 12 13, on right: 5
VarList (49)
    on left: 14 15, on right: 12 15
ParamDec (50)
    on left: 16, on right: 14 15
CompSt (51)
    on left: 17, on right: 5 21
StmList (52)
    on left: 18 19, on right: 17 19
Stmt (53)
    on left: 20 21 22 23 24 25 26, on right: 19 23 24 25
DefList (54)
    on left: 27 28, on right: 17 28
Def (55)
    on left: 29, on right: 28
DecList (56)
    on left: 30 31, on right: 29 31
Dec (57)
    on left: 32 33, on right: 30 31
Exp (58)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56, on right: 20 22 23 24 25 26 33 34 35 36 37 38 39
    40 41 42 43 44 55 57 58
Args (59)
    on left: 57 58, on right: 45 57


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   11 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 16
    LB     shift, and go to state 17

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 18

    CompSt  go to state 19


state 14

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 20

    Specifier  go to state 21
    VarList    go to state 22
    ParamDec   go to state 23


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 24

    ExtDecList  go to state 25
    VarDec      go to state 12


state 17

   11 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 26


state 18

   17 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 27 (DefList)

    Specifier  go to state 27
    DefList    go to state 28
    Def        go to state 29


state 19

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 20

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


state 21

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 24

    VarDec  go to state 30


state 22

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 31


state 23

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 32

    $default  reduce using rule 14 (VarList)


state 24

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


state 25

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 26

   11 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 33


state 27

   29 Def: Specifier . DecList SEMI

    ID  shift, and go to state 24

    VarDec   go to state 34
    DecList  go to state 35
    Dec      go to state 36


state 28

   17 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 18
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    RETURN  shift, and go to state 46
    FOR     shift, and go to state 47
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    $default  reduce using rule 18 (StmList)

    VarDec   go to state 50
    CompSt   go to state 51
    StmList  go to state 52
    Stmt     go to state 53
    Exp      go to state 54


state 29

   28 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 27 (DefList)

    Specifier  go to state 27
    DefList    go to state 55
    Def        go to state 29


state 30

   11 VarDec: VarDec . LB INT RB
   16 ParamDec: Specifier VarDec .

    LB  shift, and go to state 17

    $default  reduce using rule 16 (ParamDec)


state 31

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


state 32

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 21
    VarList    go to state 56
    ParamDec   go to state 23


state 33

   11 VarDec: VarDec LB INT RB .

    $default  reduce using rule 11 (VarDec)


state 34

   11 VarDec: VarDec . LB INT RB
   32 Dec: VarDec .
   33    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 57
    LB        shift, and go to state 17

    $default  reduce using rule 32 (Dec)


state 35

   29 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 58


state 36

   30 DecList: Dec .
   31        | Dec . COMMA DecList

    COMMA  shift, and go to state 59

    $default  reduce using rule 30 (DecList)


state 37

   48 Exp: INT .

    $default  reduce using rule 48 (Exp)


state 38

   10 VarDec: ID .
   45 Exp: ID . LP Args RP
   46    | ID . LP RP
   47    | ID .

    LP  shift, and go to state 60

    LB        reduce using rule 10 (VarDec)
    MMINUS    reduce using rule 10 (VarDec)
    PPLUS     reduce using rule 10 (VarDec)
    $default  reduce using rule 47 (Exp)


state 39

   49 Exp: FLOAT .

    $default  reduce using rule 49 (Exp)


state 40

   50 Exp: CHAR .

    $default  reduce using rule 50 (Exp)


state 41

   42 Exp: LP . Exp RP

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 61


state 42

   43 Exp: MINUS . Exp

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 62


state 43

   44 Exp: NOT . Exp

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 63


state 44

   23 Stmt: IF . LP Exp RP Stmt
   24     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 64


state 45

   25 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 65


state 46

   22 Stmt: RETURN . Exp SEMI

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 66


state 47

   26 Stmt: FOR . LP Exp SEMI Exp SEMI Exp RP

    LP  shift, and go to state 67


state 48

   54 Exp: MMINUS . VarDec

    ID  shift, and go to state 24

    VarDec  go to state 68


state 49

   53 Exp: PPLUS . VarDec

    ID  shift, and go to state 24

    VarDec  go to state 69


state 50

   11 VarDec: VarDec . LB INT RB
   51 Exp: VarDec . PPLUS
   52    | VarDec . MMINUS
   56    | VarDec . LB INT RB

    LB      shift, and go to state 70
    MMINUS  shift, and go to state 71
    PPLUS   shift, and go to state 72


state 51

   21 Stmt: CompSt .

    $default  reduce using rule 21 (Stmt)


state 52

   17 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 73


state 53

   19 StmList: Stmt . StmList

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 18
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    RETURN  shift, and go to state 46
    FOR     shift, and go to state 47
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    $default  reduce using rule 18 (StmList)

    VarDec   go to state 50
    CompSt   go to state 51
    StmList  go to state 74
    Stmt     go to state 53
    Exp      go to state 54


state 54

   20 Stmt: Exp . SEMI
   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   55    | Exp . ID

    ID        shift, and go to state 75
    RELOP     shift, and go to state 76
    SEMI      shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84


state 55

   28 DefList: Def DefList .

    $default  reduce using rule 28 (DefList)


state 56

   15 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 15 (VarList)


state 57

   33 Dec: VarDec ASSIGNOP . Exp

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 85


state 58

   29 Def: Specifier DecList SEMI .

    $default  reduce using rule 29 (Def)


state 59

   31 DecList: Dec COMMA . DecList

    ID  shift, and go to state 24

    VarDec   go to state 34
    DecList  go to state 86
    Dec      go to state 36


state 60

   45 Exp: ID LP . Args RP
   46    | ID LP . RP

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    RP      shift, and go to state 87
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 88
    Args    go to state 89


state 61

   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   42    | LP Exp . RP
   55    | Exp . ID

    ID        shift, and go to state 75
    RELOP     shift, and go to state 76
    RP        shift, and go to state 90
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84


state 62

   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   43    | MINUS Exp .
   55    | Exp . ID

    ID  shift, and go to state 75

    ID        [reduce using rule 43 (Exp)]
    $default  reduce using rule 43 (Exp)


state 63

   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   44    | NOT Exp .
   55    | Exp . ID

    ID  shift, and go to state 75

    ID        [reduce using rule 44 (Exp)]
    $default  reduce using rule 44 (Exp)


state 64

   23 Stmt: IF LP . Exp RP Stmt
   24     | IF LP . Exp RP Stmt ELSE Stmt

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 91


state 65

   25 Stmt: WHILE LP . Exp RP Stmt

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 92


state 66

   22 Stmt: RETURN Exp . SEMI
   34 Exp: Exp . ASSIGNOP Exp
   35    | Exp . AND Exp
   36    | Exp . OR Exp
   37    | Exp . RELOP Exp
   38    | Exp . PLUS Exp
   39    | Exp . MINUS Exp
   40    | Exp . STAR Exp
   41    | Exp . DIV Exp
   55    | Exp . ID

    ID        shift, and go to state 75
    RELOP     shift, and go to state 76
    SEMI      shift, and go to state 93
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84


state 67

   26 Stmt: FOR LP . Exp SEMI Exp SEMI Exp RP

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 94


state 68

   11 VarDec: VarDec . LB INT RB
   54 Exp: MMINUS VarDec .

    LB  shift, and go to state 17

    $default  reduce using rule 54 (Exp)


state 69

   11 VarDec: VarDec . LB INT RB
   53 Exp: PPLUS VarDec .

    LB  shift, and go to state 17

    $default  reduce using rule 53 (Exp)


state 70

   11 VarDec: VarDec LB . INT RB
   56 Exp: VarDec LB . INT RB

    INT  shift, and go to state 95


state 71

   52 Exp: VarDec MMINUS .

    $default  reduce using rule 52 (Exp)


state 72

   51 Exp: VarDec PPLUS .

    $default  reduce using rule 51 (Exp)


state 73

   17 CompSt: LC DefList StmList RC .

    $default  reduce using rule 17 (CompSt)


state 74

   19 StmList: Stmt StmList .

    $default  reduce using rule 19 (StmList)


state 75

   55 Exp: Exp ID .

    $default  reduce using rule 55 (Exp)


state 76

   37 Exp: Exp RELOP . Exp

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 96


state 77

   20 Stmt: Exp SEMI .

    $default  reduce using rule 20 (Stmt)


state 78

   38 Exp: Exp PLUS . Exp

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 97


state 79

   39 Exp: Exp MINUS . Exp

    INT     shift, and go to state 37
    ID      shift, and go to state 38
    FLOAT   shift, and go to state 39
    CHAR    shift, and go to state 40
    LP      shift, and go to state 41
    MINUS   shift, and go to state 42
    NOT     shift, and go to state 43
    MMINUS  shift, and go to state 48
    PPLUS   shift, and go to state 49

    VarDec  go to state 50
    Exp     go to state 98


state 80

   40 Exp: Exp STAR . Exp

    INT     shift, and go to state 37
